--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,7 +4,7 @@ img {
 
 .landing {
   position: relative;
-  background: url("./assets/img/showcase.jpg") no-repeat;
+  background: url("./assets/img/showcase1.png") no-repeat;
   background-size: cover;
   background-position: center;
   height: 100vh;
